--- a/css/_pgbackup/style_1521497035.css
+++ b/css/_pgbackup/style_1521497035.css
@@ -298,7 +298,7 @@ hr {
     content: "✓";
     font-weight: 600;
     padding-right: 10px;
-    color: #637aed;
+    color: #e75926;
 }
 
 #about i.fa {
@@ -351,7 +351,7 @@ hr {
 
 #services i.fa {
     font-size: 36px;
-    color: #637aed;
+    color: #E75926;
     transition: all 0.5s;
 }
 
