--- a/css/_pgbackup/style_1522471201.css
+++ b/css/_pgbackup/style_1522471201.css
@@ -202,7 +202,7 @@ hr {
     text-align: center;
     color: #fff;
     background: url(../img/laptop.jpg) repeat center center fixed;
-    background-color: #fbf8f8;
+    background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
