--- a/css/_pgbackup/style_1522471692.css
+++ b/css/_pgbackup/style_1522471692.css
@@ -113,7 +113,7 @@ hr {
     width: 70px;
     text-align: center;
     position: relative;
-    background: #637aed;
+    background: #E75926;
     margin: 0 auto;
     margin-bottom: 30px;
     border: 0;
