--- a/css/_pgbackup/style_1522543496.css
+++ b/css/_pgbackup/style_1522543496.css
@@ -266,13 +266,7 @@ hr {
 }
 
 .section-title.center {
-    padding: 30px 1px 30px 0;
-    left: 51px;
-    right: 50px;
-    top: 10px;
-    bottom: 25px;
-    margin-right: -16px;
-    margin-left: 7px;
+    padding: 30px 0;
 }
 
 .section-title h2,
@@ -532,9 +526,6 @@ img.img-thumbnail.team-img {
 #team .thumbnail {
     background: transparent;
     border: 0;
-    right: 47px;
-    left: -3px;
-    margin-left: -12px;
 }
 
 #team .thumbnail .caption {
